notifications FALLBACK HERE IF ALL ELSE FAILS